--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="inline-block">SW-7899-8096-6577</div>
             </div>
             <div class="collapse-content">
-                <button class="btn input"
+                <button class="m-2 btn input"
                     onclick="window.location.href='https://lounge.nintendo.com/friendcode/7899-8096-6577/DBTpJyqwJy';">Open
                     in app</button>
                 <p></p>
@@ -159,14 +159,14 @@
             <div class="collapse-content">
                 <form action="https://formsubmit.co/ffa7cbf7500544878ac78156e6434d57" method="POST">
                     <div class="w-full">
-                        <input type="text" name="name" placeholder="Your name" class="my-2 w-full	input " required />
+                        <input type="text" name="name" placeholder="Your name" class="m-2 w-full	input " required />
                         <input type="hidden" name="_next" value="https://aidan.nl/?notify=message%20success">
-                        <input type="email" name="email" placeholder="Your email address" class="my-2 w-full input "
+                        <input type="email" name="email" placeholder="Your email address" class="m-2 w-full input "
                             required>
                         <textarea id="autoresizing" name="message" style="resize: none !important"
-                            class="my-2 w-full block overflow-hidden resize-none textarea " placeholder="Your message"
+                            class="m-2 w-full block overflow-hidden resize-none textarea " placeholder="Your message"
                             required></textarea>
-                            <button type="submit" class="my-2 btn input">Send</button>
+                            <button type="submit" class="m-2 btn input">Send</button>
                     </div>
                 </form>
             </div>
