fix form layout
spacing

--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
                     </svg></div>
                 <div class="inline-block">Send Message</div>
             </div>
-            <div class="collapse-content">
+            <div class="collapse-content w-full">
                 <form action="https://formsubmit.co/ffa7cbf7500544878ac78156e6434d57" method="POST">
-                    <div class="w-full">
-                        <input type="text" name="name" placeholder="Your name" class="m-2 w-full	input " required />
+                    <div class="px-2 w-full ">
+                        <input type="text" name="name" placeholder="Your name" class="my-2 w-full	input " required />
                         <input type="hidden" name="_next" value="https://aidan.nl/?notify=message%20success">
-                        <input type="email" name="email" placeholder="Your email address" class="m-2 w-full input "
+                        <input type="email" name="email" placeholder="Your email address" class="my-2 w-full input "
                             required>
                         <textarea id="autoresizing" name="message" style="resize: none !important"
-                            class="m-2 w-full block overflow-hidden resize-none textarea " placeholder="Your message"
+                            class="my-2 w-full block overflow-hidden resize-none textarea " placeholder="Your message"
                             required></textarea>
-                            <button type="submit" class="m-2 btn input">Send</button>
+                            <button type="submit" class="my-2 btn input">Send</button>
                     </div>
                 </form>
             </div>
