--- a/index.html
+++ b/index.html
@@ -84,20 +84,19 @@
             <input type="checkbox" />
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2" id="music-icon"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        fill="currentColor" viewBox="0 0 24 24" transform="scale(2)">
+                        fill="currentColor" viewBox="0 0 512 512" transform="scale(1.5)">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M11.6311 10.4879C12.67 10.4879 13.5122 11.3301 13.5122 12.3689C13.5122 13.4078 12.67 14.25 11.6311 14.25C10.5922 14.25 9.75 13.4078 9.75 12.3689C9.75 11.3301 10.5922 10.4879 11.6311 10.4879Z"
                             fill="#000000"></path>
                         <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22ZM14.487 3.28447C14.2592 3.21292 14.0109 3.25412 13.8184 3.39542C13.6259 3.53672 13.5122 3.76123 13.5122 4.00001V9.55906C12.9744 9.19832 12.3274 8.98789 11.6311 8.98789C9.76379 8.98789 8.25 10.5016 8.25 12.3689C8.25 14.2363 9.76379 15.75 11.6311 15.75C13.4984 15.75 15.0122 14.2363 15.0122 12.3689V5.0937C17.0389 6.03733 18.6064 7.80369 19.2845 9.96238C19.4086 10.3576 19.8296 10.5773 20.2247 10.4532C20.6199 10.3291 20.8397 9.90808 20.7155 9.5129C19.7853 6.55129 17.4486 4.21465 14.487 3.28447Z" />
+                            d="M256,0C114.609,0,0,114.625,0,256s114.609,256,256,256s256-114.625,256-256S397.391,0,256,0z M96.469,149.891 l-1.438,2.172l-20.469-13.625l1.453-2.188C108.594,87.375,160.344,53.469,218,43.219l2.578-0.453l4.313,24.203l-2.578,0.438 C171.219,76.484,125.359,106.547,96.469,149.891z M145.781,186.688l-20.719-13.953l1.813-2.703 c23.438-34.828,60.484-59.313,101.625-67.156l3.203-0.641l4.672,24.547l-3.188,0.594c-34.641,6.656-65.828,27.266-85.594,56.594 L145.781,186.688z M159.578,256c0-53.25,43.172-96.406,96.422-96.422c53.25,0.016,96.406,43.172,96.406,96.422 S309.25,352.406,256,352.406S159.578,309.25,159.578,256z M280.938,415.25l-4.031-24.656l3.234-0.531 c36.609-5.969,69.359-27.203,89.813-58.188l1.797-2.719l20.875,13.719l-1.813,2.75c-24.266,36.781-63.141,61.969-106.656,69.094 L280.938,415.25z M436,375.734c-32.594,48.891-84.344,82.813-142.016,93.063l-2.578,0.438l-4.281-24.203l2.563-0.453 c51.063-9.047,96.953-39.109,125.844-82.484l1.438-2.188l20.469,13.656L436,375.734z"></path> <path class="st0" d="M308.359,203.641c-13.422-13.422-31.891-21.672-52.359-21.688c-20.453,0-38.922,8.266-52.344,21.688 S181.969,235.531,181.969,256s8.266,38.938,21.688,52.359s31.891,21.672,52.344,21.688c20.469-0.016,38.938-8.266,52.359-21.688 c13.391-13.422,21.672-31.891,21.672-52.359S321.75,217.063,308.359,203.641z M256,295.391c-21.75,0-39.375-17.641-39.375-39.391 S234.25,216.625,256,216.625S295.375,234.25,295.375,256S277.75,295.391,256,295.391z" />
                     </svg>
                 </div>
                 <div class="inline-block" id='lastfm-text1'></div>
                 <div class="inline-block" id='lastfm-text2'>Music Stats</div>
             </div>
             <div class="collapse-content">
-
-                <p>TopTracks Last.fm from the last 30 days</p>
+                <p>Most listened tracks from the last 30 days</p>
                 <div class="overflow-x-auto ">
                     <table class="table table-xs	">
                         <thead>
@@ -128,16 +127,16 @@
                 <div class="inline-block">AniList</div>
             </div>
             <div class="collapse-content">
-                <button class="m-2 btn input" onclick="window.location.href='https://anilist.co/user/aiydn';">My Account
-                    Overview</button>
+                <button class="m-2 btn input" onclick="window.location.href='https://anilist.co/user/aiydn';">My account
+                    overview</button>
                 <button class="m-2 btn input" onclick="window.location.href='https://anilist.co/user/aiydn/favorites';">See
                     my Favorites</button>
                 <button class="m-2 btn input"
                     onclick="window.location.href='https://anilist.co/user/aiydn/animelist/Watching';">What I'm
-                    Watching</button>
+                    watching</button>
                 <button class="m-2 btn input"
                     onclick="window.location.href='https://anilist.co/user/aiydn/animelist/Completed';">Completed
-                    Anime's </button>
+                    anime's </button>
                 <button class="m-2 btn input"
                     onclick="window.location.href='https://anilist.co/user/aiydn/animelist/Planning';">What I'm planning
                     to watch</button>
