--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     </svg>
                 </div>
                 <div class="inline-block" id='lastfm-text1'></div>
-                <div class="inline-block" id='lastfm-text2'>Music Stats</div>
+                <div class="inline-block" id='lastfm-text2'>Music stats</div>
             </div>
             <div class="collapse-content">
-                <p>Most listened tracks from the last 30 days</p>
+                <p>Most listened songs from the last 30 days</p>
                 <div class="overflow-x-auto ">
                     <table class="table table-xs	">
                         <thead>
@@ -130,7 +130,7 @@
                 <button class="m-2 btn input" onclick="window.location.href='https://anilist.co/user/aiydn';">My account
                     overview</button>
                 <button class="m-2 btn input" onclick="window.location.href='https://anilist.co/user/aiydn/favorites';">See
-                    my Favorites</button>
+                    my favorites</button>
                 <button class="m-2 btn input"
                     onclick="window.location.href='https://anilist.co/user/aiydn/animelist/Watching';">What I'm
                     watching</button>
@@ -153,7 +153,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M17 2H7C4.24 2 2 4.23 2 6.98V12.96V13.96C2 16.71 4.24 18.94 7 18.94H8.5C8.77 18.94 9.13 19.12 9.3 19.34L10.8 21.33C11.46 22.21 12.54 22.21 13.2 21.33L14.7 19.34C14.89 19.09 15.19 18.94 15.5 18.94H17C19.76 18.94 22 16.71 22 13.96V6.98C22 4.23 19.76 2 17 2ZM13 13.75H7C6.59 13.75 6.25 13.41 6.25 13C6.25 12.59 6.59 12.25 7 12.25H13C13.41 12.25 13.75 12.59 13.75 13C13.75 13.41 13.41 13.75 13 13.75ZM17 8.75H7C6.59 8.75 6.25 8.41 6.25 8C6.25 7.59 6.59 7.25 7 7.25H17C17.41 7.25 17.75 7.59 17.75 8C17.75 8.41 17.41 8.75 17 8.75Z" />
                     </svg></div>
-                <div class="inline-block">Send Message</div>
+                <div class="inline-block">Send message</div>
             </div>
             <div class="collapse-content w-full">
                 <form action="https://formsubmit.co/ffa7cbf7500544878ac78156e6434d57" method="POST">
