--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="flex flex-col justify-center w-4/5 min-w-min">
         <div class="my-2"></div>
         <!-- notification -->
-        <div id="notification" class="my-2 hidden ">
+        <div id="notification" class="z-50 m-2 hidden fixed inset-x-0 top-0 w-max ">
             <div class="alert alert-success">
                 <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none"
                     viewBox="0 0 24 24">
