--- a/index.html
+++ b/index.html
@@ -45,26 +45,26 @@
         </div>
         <p class="my-2 text-2xl text-center">Aidan</p>
         <!-- discord -->
-        <div class="my-2 collapse bg-base-200">
-            <input type="checkbox" />
+        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+            <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
-                <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        fill="currentColor" viewBox="0 0 24 24" transform="scale(2)">
+                <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5y"
+                        viewBox="0 0 24 24" transform="scale(2)">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M18.942 5.556a16.299 16.299 0 0 0-4.126-1.297c-.178.321-.385.754-.529 1.097a15.175 15.175 0 0 0-4.573 0 11.583 11.583 0 0 0-.535-1.097 16.274 16.274 0 0 0-4.129 1.3c-2.611 3.946-3.319 7.794-2.965 11.587a16.494 16.494 0 0 0 5.061 2.593 12.65 12.65 0 0 0 1.084-1.785 10.689 10.689 0 0 1-1.707-.831c.143-.106.283-.217.418-.331 3.291 1.539 6.866 1.539 10.118 0 .137.114.277.225.418.331-.541.326-1.114.606-1.71.832a12.52 12.52 0 0 0 1.084 1.785 16.46 16.46 0 0 0 5.064-2.595c.415-4.396-.709-8.209-2.973-11.589zM8.678 14.813c-.988 0-1.798-.922-1.798-2.045s.793-2.047 1.798-2.047 1.815.922 1.798 2.047c.001 1.123-.793 2.045-1.798 2.045zm6.644 0c-.988 0-1.798-.922-1.798-2.045s.793-2.047 1.798-2.047 1.815.922 1.798 2.047c0 1.123-.793 2.045-1.798 2.045z" />
                     </svg></div>
                 <div class="inline-block">Discord: <span id="discord">aiydn</span></div>
             </div>
             <div class="collapse-content">
-                <button class="m-2 btn input" onclick="discord()">Copy username</button>
+                <button class="m-2 btn btn-outline btn-primary" onclick="discord()">Copy username</button>
             </div>
         </div>
         <!-- Nintendo Switch -->
-        <div class="my-2 collapse bg-base-200">
-            <input type="checkbox" />
+        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+            <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        fill="currentColor" viewBox="0 0 32 32" transform="scale(1.5)">
+                        viewBox="0 0 32 32" transform="scale(1.5)">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M18.901 32h4.901c4.5 0 8.198-3.698 8.198-8.198v-15.604c0-4.5-3.698-8.198-8.198-8.198h-5c-0.099 0-0.203 0.099-0.203 0.198v31.604c0 0.099 0.099 0.198 0.302 0.198zM25 14.401c1.802 0 3.198 1.5 3.198 3.198 0 1.802-1.5 3.198-3.198 3.198-1.802 0-3.198-1.396-3.198-3.198-0.104-1.797 1.396-3.198 3.198-3.198zM15.198 0h-7c-4.5 0-8.198 3.698-8.198 8.198v15.604c0 4.5 3.698 8.198 8.198 8.198h7c0.099 0 0.203-0.099 0.203-0.198v-31.604c0-0.099-0.099-0.198-0.203-0.198zM12.901 29.401h-4.703c-3.099 0-5.599-2.5-5.599-5.599v-15.604c0-3.099 2.5-5.599 5.599-5.599h4.604zM5 9.599c0 1.698 1.302 3 3 3s3-1.302 3-3c0-1.698-1.302-3-3-3s-3 1.302-3 3z" />
                     </svg></div>
@@ -73,18 +73,18 @@
                 <div class="inline-block">SW-7899-8096-6577</div>
             </div>
             <div class="collapse-content">
-                <button class="m-2 btn input"
+                <button class="m-2 btn btn-outline btn-primary"
                     onclick="window.location.href='https://lounge.nintendo.com/friendcode/7899-8096-6577/DBTpJyqwJy';">Open
                     in app</button>
                 <p></p>
             </div>
         </div>
         <!-- Last.FM -->
-        <div class="my-2 collapse bg-base-200">
-            <input type="checkbox" />
+        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+            <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
-                <div class="inline-block mr-2" id="music-icon"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        fill="currentColor" viewBox="0 0 512 512" transform="scale(1.5)">
+                <div class="inline-block mr-2" id="music-icon"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 "
+                        viewBox="0 0 512 512" transform="scale(1.5)">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M11.6311 10.4879C12.67 10.4879 13.5122 11.3301 13.5122 12.3689C13.5122 13.4078 12.67 14.25 11.6311 14.25C10.5922 14.25 9.75 13.4078 9.75 12.3689C9.75 11.3301 10.5922 10.4879 11.6311 10.4879Z"
                             fill="#000000"></path>
@@ -111,33 +111,33 @@
                         </tbody>
                     </table>
                 </div>
-                <button class="m-2 btn input" onclick="window.location.href='https://www.last.fm/user/aiydn';">Open
+                <button class="m-2 btn btn-outline btn-primary" onclick="window.location.href='https://www.last.fm/user/aiydn';">Open
                     Last.fm profile</button>
             </div>
         </div>
         <!-- anilist -->
-        <div class="my-2 collapse bg-base-200">
-            <input type="checkbox" />
+        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+            <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        fill="currentColor" viewBox="0 0 24 24" transform="scale(2)">
+                        viewBox="0 0 24 24" transform="scale(2)">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M6.361 2.943 0 21.056h4.942l1.077-3.133H11.4l1.052 3.133H22.9c.71 0 1.1-.392 1.1-1.101V17.53c0-.71-.39-1.101-1.1-1.101h-6.483V4.045c0-.71-.392-1.102-1.101-1.102h-2.422c-.71 0-1.101.392-1.101 1.102v1.064l-.758-2.166zm2.324 5.948 1.688 5.018H7.144z" />
                     </svg></div>
                 <div class="inline-block">AniList</div>
             </div>
             <div class="collapse-content">
-                <button class="m-2 btn input" onclick="window.location.href='https://anilist.co/user/aiydn';">My account
+                <button class="m-2 btn btn-outline btn-primary" onclick="window.location.href='https://anilist.co/user/aiydn';">My account
                     overview</button>
-                <button class="m-2 btn input" onclick="window.location.href='https://anilist.co/user/aiydn/favorites';">See
+                <button class="m-2 btn btn-outline btn-primary" onclick="window.location.href='https://anilist.co/user/aiydn/favorites';">See
                     my favorites</button>
-                <button class="m-2 btn input"
+                <button class="m-2 btn btn-outline btn-primary"
                     onclick="window.location.href='https://anilist.co/user/aiydn/animelist/Watching';">What I'm
                     watching</button>
-                <button class="m-2 btn input"
+                <button class="m-2 btn btn-outline btn-primary"
                     onclick="window.location.href='https://anilist.co/user/aiydn/animelist/Completed';">Completed
                     anime's </button>
-                <button class="m-2 btn input"
+                <button class="m-2 btn btn-outline btn-primary"
                     onclick="window.location.href='https://anilist.co/user/aiydn/animelist/Planning';">What I'm planning
                     to watch</button>
 
@@ -145,11 +145,11 @@
             </div>
         </div>
         <!-- Message -->
-        <div class="my-2 collapse bg-base-200">
-            <input type="checkbox" />
+        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+            <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        fill="currentColor" viewBox="0 0 24 24" transform="scale(2)">
+                        viewBox="0 0 24 24" transform="scale(2)">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M17 2H7C4.24 2 2 4.23 2 6.98V12.96V13.96C2 16.71 4.24 18.94 7 18.94H8.5C8.77 18.94 9.13 19.12 9.3 19.34L10.8 21.33C11.46 22.21 12.54 22.21 13.2 21.33L14.7 19.34C14.89 19.09 15.19 18.94 15.5 18.94H17C19.76 18.94 22 16.71 22 13.96V6.98C22 4.23 19.76 2 17 2ZM13 13.75H7C6.59 13.75 6.25 13.41 6.25 13C6.25 12.59 6.59 12.25 7 12.25H13C13.41 12.25 13.75 12.59 13.75 13C13.75 13.41 13.41 13.75 13 13.75ZM17 8.75H7C6.59 8.75 6.25 8.41 6.25 8C6.25 7.59 6.59 7.25 7 7.25H17C17.41 7.25 17.75 7.59 17.75 8C17.75 8.41 17.41 8.75 17 8.75Z" />
                     </svg></div>
@@ -158,14 +158,14 @@
             <div class="collapse-content w-full">
                 <form action="https://formsubmit.co/ffa7cbf7500544878ac78156e6434d57" method="POST">
                     <div class="px-2 w-full ">
-                        <input type="text" name="name" placeholder="Your name" class="my-2 w-full	input " required />
+                        <input type="text" name="name" placeholder="Your name" class="my-2 w-full input input-bordered input-primary bg-base-200" required />
                         <input type="hidden" name="_next" value="https://aidan.nl/?notify=message%20success">
-                        <input type="email" name="email" placeholder="Your email address" class="my-2 w-full input "
+                        <input type="email" name="email" placeholder="Your email address" class="my-2 w-full input input-bordered input-primary bg-base-200"
                             required>
                         <textarea id="autoresizing" name="message" style="resize: none !important"
-                            class="my-2 w-full block overflow-hidden resize-none textarea " placeholder="Your message"
+                            class="my-2 w-full block overflow-hidden resize-none textarea textarea-primary bg-base-200" placeholder="Your message"
                             required></textarea>
-                            <button type="submit" class="my-2 btn input">Send</button>
+                            <button type="submit" class="my-2 btn btn-outline btn-primary">Send</button>
                     </div>
                 </form>
             </div>
