remove hover:fill-primary

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <p class="my-2 text-2xl text-center">Aidan</p>
         <!-- discord -->
-        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+        <div class="my-2 collapse bg-base-200 fill-base-content ">
             <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5y"
@@ -60,7 +60,7 @@
             </div>
         </div>
         <!-- Nintendo Switch -->
-        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+        <div class="my-2 collapse bg-base-200 fill-base-content ">
             <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
@@ -80,7 +80,7 @@
             </div>
         </div>
         <!-- Last.FM -->
-        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+        <div class="my-2 collapse bg-base-200 fill-base-content ">
             <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2" id="music-icon"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 "
@@ -116,7 +116,7 @@
             </div>
         </div>
         <!-- anilist -->
-        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+        <div class="my-2 collapse bg-base-200 fill-base-content ">
             <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
@@ -145,7 +145,7 @@
             </div>
         </div>
         <!-- Message -->
-        <div class="my-2 collapse bg-base-200 fill-base-content hover:fill-primary ">
+        <div class="my-2 collapse bg-base-200 fill-base-content ">
             <input type="checkbox" /> 
             <div class="collapse-title text-xl font-medium m-2">
                 <div class="inline-block mr-2"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
