--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </script>
     <meta name="robots" content="INDEX,FOLLOW" />
     <meta name="description" content="Discord: aiydn">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>aidan.nl</title>
     <link rel="icon" type="image/x-icon" href="https://www.gravatar.com/avatar/0f65d85f09708f4676974710c85a545f?s=128">
