--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z9Y8QS4XM0"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-Z9Y8QS4XM0');
-    </script>
-    <meta name="robots" content="INDEX,FOLLOW" />
     <meta name="description" content="Discord: aiydn">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -19,11 +11,10 @@
     <meta name="author" content="Aidan">
     <meta name="theme-color" content="#ffffff" />
     <meta charset="UTF-8" /
-    <script type="text/javascript">
-            window.location.href = "https://gravatar.com/aiydn"
-        </script>
+    <meta http-equiv="refresh" content="0; url=https://gravatar.com/aiydn">
+    <script>window.location.href = "https://gravatar.com/aiydn"</script>
   </head>
- <body>
-        If you are not redirected automatically, click <a href='https://gravatar.com/aiydn'>here</a>.
+<body>
+        If you are not redirected automatically, follow this <a href='https://gravatar.com/aiydn'>link to example</a>.
     </body>
 </html>
